[package]
name = "wikitext_parser_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wikitext_parser_rust"
path = "src/main.rs"

[[bin]]
name = "inspect"
path = "src/inspect.rs"

[[bin]]
name = "export_text"
path = "src/export_text.rs"

[[bin]]
name = "export_parsed"
path = "src/export_parsed.rs"

[dependencies]
parse_wiki_text = "0.1"
parquet = "53.3.0"
arrow = "53.3.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
